[tool.poetry]
name = "bdcctools"
version = "0.2.0"
description = "Biodiversity Data Cleaning and Curation Tools."
license = "MIT"
authors = ["Marcelo Villa-Piñeros <mvilla@humboldt.org.co>"]
repository = "https://github.com/PEM-Humboldt/bdcc-tools"

[tool.poetry.dependencies]
python = "^3.8"
appdirs = "^1.4.4"
click = "^7.1.2"
Fiona = "^1.8.18"
gdown = "^3.12.2"
geopandas = "^0.8.1"
numpy = "^1.19.4"
pandas = "^1.1.4"
pygeos = "^0.8"
rasterio = "^1.1.8"
rasterstats = "^0.15.0"
requests = "^2.25.0"
scipy = "^1.5.4"
shapely = "^1.7.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
ipython = "^7.19.0"
pytest = "^6.1.2"

[tool.poetry.scripts]
bdcctools = "bdcctools.cli.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:rasterstats",
    "ignore::RuntimeWarning:geopandas",
    "ignore::UserWarning:geopandas"
]
