[tool.poetry]
name = "bdcctools"
version = "0.1.0"
description = "Biodiversity Data Cleaning and Curation Tools."
license = "MIT"
authors = ["Marcelo Villa-Piñeros <mvilla@humboldt.org.co>"]
repository = "https://github.com/PEM-Humboldt/bdcc-tools"

[tool.poetry.dependencies]
python = "^3.8"
appdirs = "^1.4.4"
click = "^7.1.2"
Fiona = [
    { platform = "darwin", version = "^1.8.18" },
    { platform = "linux", version = "^1.8.18" },
    { platform = "win32", url="https://bdcc-data.s3.amazonaws.com/Fiona-1.8.18-cp38-cp38-win_amd64.whl" }
]
GDAL = [
    { platform = "win32", url="https://bdcc-data.s3.amazonaws.com/GDAL-3.2.1-cp38-cp38-win_amd64.whl" }
]
gdown = "^3.12.2"
geopandas = "^0.9.0"
numpy = "^1.19.4"
pandas = "^1.1.4"
pygeos = "^0.9"
rasterio = [
    { platform = "darwin", version = "^1.2.1" },
    { platform = "linux", version = "^1.2.1" },
    { platform = "win32", url="https://bdcc-data.s3.amazonaws.com/rasterio-1.2.1-cp38-cp38-win_amd64.whl" }
]
rasterstats = "^0.15.0"
requests = "^2.25.0"
scipy = "^1.5.4"
shapely = "^1.7.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
ipython = "^7.19.0"
pytest = "^6.1.2"

[tool.poetry.scripts]
bdcctools = "bdcctools.cli.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:rasterstats",
    "ignore::RuntimeWarning:geopandas",
    "ignore::UserWarning:geopandas"
]
