[metadata]
name = bdcctools
version = 0.2.0
author = Marcelo Villa-Piñeros
author_email = mvilla@humboldt.org.co
description = Biodiversity Data Cleaning and Curation Tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PEM-Humboldt/bdcc-tools
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
install_requires =
    appdirs
    click
    Fiona
    gdal
    gdown
    geopandas
    numpy
    openpyxl
    pandas
    pygeos
    rapidfuzz
    rasterio
    rasterstats
    requests
    Rtree
    scipy
    shapely
packages = find:
zip_safe = False

[options.entry_points]
console_scripts =
    bdcctools = bdcctools.cli.cli:main

[options.extras_require]
dev =
    black
    ipython
test =
    pytest
