[metadata]
name = regi0
version = 0.2.4
author = Marcelo Villa-Piñeros
author_email = mvilla@humboldt.org.co
description = A Python toolkit to complement and verify biological records.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PEM-Humboldt/regi0
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.7, <3.10
include_package_data = True
install_requires =
    appdirs
    click
    Fiona
    geopandas>=0.10
    numpy>=1.15
    openpyxl
    pandas
    pygeos
    rapidfuzz
    rasterio>=1.2
    rasterstats
    requests
    scipy
packages = find:
zip_safe = False

[options.entry_points]
console_scripts =
    regi0 = regi0.cli.cli:main

[options.extras_require]
dev =
    black
    ipython
docs =
    sphinx
    sphinx-rtd-theme
test =
    coverage
    pytest
